--- a/Source/Web/functions/package.json
+++ b/Source/Web/functions/package.json
@@ -1,6 +1,9 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "engines": {
+    "node": "10"
+  },
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase serve --only functions",
@@ -11,10 +14,10 @@
     "test": "ava"
   },
   "dependencies": {
-    "firebase-admin": "~5.10.0",
-    "firebase-functions": "^1.1.0",
-    "cors": "~2.8.4",
-    "moment": "~2.22.2"
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.2",
+    "cors": "^2.8.5",
+    "moment": "^2.26.0"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.3",
